@@ -90,6 +90,9 @@ FTPDCTL_OBJS=ftpdctl.o pool.o netaddr.o log.o ctrls.o
 BUILD_FTPDCTL_OBJS=src/ftpdctl.o src/pool.o src/str.o src/netaddr.o src/log.o \
   src/ctrls.o
 
+FTPSCRUB_OBJS=ftpscrub.o scoreboard.o misc.o
+BUILD_FTPSCRUB_OBJS=utils/ftpscrub.o utils/scoreboard.o utils/misc.o
+
 FTPSHUT_OBJS=ftpshut.o
 BUILD_FTPSHUT_OBJS=utils/ftpshut.o
 
